--- a/assets/scss/_global-styles.scss
+++ b/assets/scss/_global-styles.scss
@@ -2,7 +2,7 @@
 body {
   font-family: $text-font !important;
   color: $text-color;
-  font-size: 18px;
+  font-size: 1rem;
   font-weight: 500;
   line-height: 30px;
   margin-bottom: 0;
